fixed bug with pagination functionality
