# docs/swagger.json
@@ -13,6 +13,44 @@
     "host": "localhost:8082",
     "basePath": "/api/v1",
     "paths": {
+        "/api/v1/repositories/:repo": {
+            "get": {
+                "description": "Used to Add Repository to the application",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Repository"
+                ],
+                "summary": "Used to Add Repository to the application",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Number of Authors",
+                        "name": "repo",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.BaseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/commits/authors/top": {
             "get": {
                 "description": "Get top N commit Authors where N is a number",
@@ -181,6 +219,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.BaseResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
